@@ -20,10 +20,12 @@ package org.pustefixframework.container.spring.util;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.Reader;
+import java.net.URI;
 import java.util.Properties;
 
 import org.pustefixframework.config.generic.PropertyFileReader;
 import org.springframework.util.DefaultPropertiesPersister;
+import org.xml.sax.InputSource;
 
 import com.marsching.flexiparse.parser.exception.ParserException;
 
@@ -35,7 +37,13 @@ import com.marsching.flexiparse.parser.exception.ParserException;
  *
  */
 public class PustefixPropertiesPersister extends DefaultPropertiesPersister {
-
+    
+    private URI uri;
+    
+    public void setLocation(URI uri) {
+        this.uri = uri;
+    }
+    
     @Override
     public void load(Properties props, InputStream in) throws IOException {
         super.load(props, in);
@@ -49,10 +57,20 @@ public class PustefixPropertiesPersister extends DefaultPropertiesPersister {
     @Override
     public void loadFromXml(Properties properties, InputStream in) throws IOException { 
         try {
-            PropertyFileReader.read(in, properties);
+            InputSource inputSource = new InputSource(in);
+            if(uri != null) inputSource.setSystemId(uri.toASCIIString());
+            PropertyFileReader.read(inputSource, properties);
         } catch(ParserException x) {
-            throw new IOException("Error reading XML properties: "+x.getMessage());
+            String msg = x.getMessage();
+            Throwable cause = x.getCause();
+            while(cause != null) {
+                msg += "[" + cause.getMessage() +"]";
+                cause = cause.getCause();
+            }
+            //TODO: IOException doesn't support Throwable constructor argument in 1.5
+            //we should throw a derived IOException here
+            throw new IOException("Error reading XML properties: " + msg);
         }
     }
-    
+
 }
